--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -13,12 +13,12 @@
   <footer class="site-footer"  itemscope itemtype="http://schema.org/WPFooter">
     <div id="footer_icon">
       <div class="icon_left">
-        <a class="icon_link" href="https://travellings.link" title="开往-随机跳转到另一个加入开往的网页"><i class="fa-solid fa-subway fa-fw"></i></a>
+        <a class="icon_link" href="https://travellings.cn" title="开往-随机跳转到另一个加入开往的网页"><i class="fa-solid fa-subway fa-fw"></i></a>
         <a class="icon_link" href="https://github.com/qystudio0" title="我的Github主页"><i class="fa-brands fa-github fa-fw"></i></a>
         <a class="icon_link" href="/about" title="关于本站"><i class="fa-solid fa-info-circle fa-fw"></i></a>
       </div>
       <div class="icon_left">
-        <a class="icon_link" href="https://qystudio.ltd/atom.xml" title="网站订阅"><i class="fa-solid fa-compass fa-fw"></i></a>
+        <a class="icon_link" href="https://qystu.cc/atom.xml" title="网站订阅"><i class="fa-solid fa-compass fa-fw"></i></a>
         <a class="icon_link" href="https://qm.qq.com/cgi-bin/qm/qr?k=TjbIk84fDNYu4UAzA4xDzRk53hkKABh_&authKey=St%2F%2B%2FHaVkOvMkzZAqWXC5jfovqmrVqIStz5FL9o2oOCxZYAVth5ywkwnShxmf8X%2B&noverify=0&group_code=660414614" title="联系QQ"><i class="fa-brands fa-qq fa-fw"></i></a>
         <a class="icon_link" href="mailto:admin@qystu.cc" title="联系邮箱"><i class="fa-solid fa-envelope fa-fw"></i></a>
       </div>
@@ -37,10 +37,10 @@
       <div class="footer-group">
           <h3 class="footer-title">分类</h3>
           <div class="footer-links">
-            <a class="footer-item" href="/categories/博客相关">博客相关</a>
-            <a class="footer-item" href="/categories/学习笔记">学习笔记</a>
-            <a class="footer-item" href="/categories/实用教程">实用教程</a>
-            <a class="footer-item" href="/categories/生活记录">生活记录</a>
+            <a class="footer-item" href="/tags/博客/">博客</a>
+            <a class="footer-item" href="/tags/系统/">系统</a>
+            <a class="footer-item" href="/tags/前端/">前端</a>
+            <a class="footer-item" href="/tags/图床/">图床</a>
           </div>
       </div>
       <div class="footer-group" id="friend-links-in-footer">
@@ -56,8 +56,8 @@
           <h3 class="footer-title">其他</h3>
           <div class="footer-links">
             <a class="footer-item" href="/privacy">隐私协议</a>
-            <a class="footer-item" href="https://qystudio.ltd/sitemap.xml">网站地图</a>
-            <a class="footer-item" href="https://qystudio.ltd/atom.xml">我的订阅</a>
+            <a class="footer-item" href="https://qystu.cc/sitemap.xml">网站地图</a>
+            <a class="footer-item" href="https://qystu.cc/atom.xml">我的订阅</a>
             <a class="footer-item" href="/join">加入我们</a>
           </div>
       </div>
